--- a/linkbook/links/templates/links/link.html
+++ b/linkbook/links/templates/links/link.html
@@ -45,6 +45,19 @@
                                             <a class="btn-floating btn-small waves-effect waves-light blue" href="#" title="Share"><i class="material-icons">share</i></a>
                                         </div>
                                     </div>
+                                    <div id="modal1" class="modal">
+                                            <div class="modal-content">
+                                                <div class="row">
+                                                    <div class="col s12 m8 l8">
+                                                        <div class="title"><a id="link_url" href="{{ link.url }}" target="_blank"> {{ link.url }}</a>  </div>
+                                                    </div>
+                                                    <div class="col s12 m4 l4">
+                                                       <button title="copy to clipboard" class="btn black white-text" id="copy"> <i class="material-icons black" style="color: white">content_copy</i></button>
+                                                    </div>
+                                                </div>
+
+                                            </div>
+                                          </div>
 
                                 </div>
                                 <hr>
