improved profile page

--- a/linkbook/core/templates/core/profile.html
+++ b/linkbook/core/templates/core/profile.html
@@ -19,16 +19,16 @@
                 <br>
                 <br>
                 <div class="center center-align valign-wrapper">
-                    <i class="material-icons small circle">email</i> <a href="mailto:{{ user.email }}">Email has to be wriiten here</a>
+                    <i class="material-icons small circle">email</i> <a href="mailto:{{ user.email }}">{{user.email}}</a>
 
                 </div>
                 <hr>
                 <button class="btn blue darken-3 hoverable waves-effect waves-light" style="width: 100%" id="follow">Follow</button>
                 </div>
             <div class="col s12 m12 l4" style="height: 100%; border-right: 1px solid black">
-                <button class="btn btn-flat blue" style="width: 90%">Name : {{ user.name}}</button><br><br>
-                <button class="btn btn-flat green" style="width: 90%">Follows : {{ user.follows }} People</button><br><br>
-                <button class="btn btn-flat blue" style="width: 90%"> followers : {{ followers }}</button>
+                <button class="btn btn-flat blue" style="width: 90%">Name : {{ user.first_name}} {{user.last_name}}</button><br><br>
+                <button class="btn btn-flat green" style="width: 90%">Following : {{ following_count }} </button><br><br>
+                <button class="btn btn-flat blue" style="width: 90%"> Followers : {{ follower_count }}</button>
                 <br><br>
                 <button class="btn btn-flat green" style="width: 90%"> Total Links : {{ link_count }}</button>
                 <br><br>
@@ -39,7 +39,7 @@
                     <h5>Popular Links</h5>
                     <div id="links_Collections">
                     <ul class="collection">
-                        {% for link in user.links %}
+                        {% for link in links %}
                             <li class="collection-item avatar">
                                 <span class="title">{{ link.title }}</span>
                                 <br>
@@ -61,12 +61,12 @@
         </div>
     </div>
 
-    <!---
+    <!--
 <li>
  <img height = "40px" width="40px" src="{{user.profile.pic}}" />
 </li>
 <li>Username: {{user.username}}</li>
 <li>Links: {{link_count}}</li>
 <li>Books: {{book_count}}</li>
---->
+-->
 {% endblock body %}
