--- a/linkbook/templates/base.html
+++ b/linkbook/templates/base.html
@@ -96,7 +96,7 @@
                         <div class="input-field ">
                             <i class="material-icons prefix">open_in_browser</i>
                             <input type="url" class="input validate" name="URL" id="URL" autocomplete="autocomplete" required>
-                            <label for="URL" class="active" data-error="Invalid URL, Example(Valid URL) : https://www.google.co.in." data-success="Correct">URL</label>
+                            <label for="URL" class="active" data-error="Invalid URL, Example(Valid URL) : https://www.google.co.in." data-success="">URL</label>
                         </div>
                     </div>
                     <div class="col s12 m6 l6">
