--- a/linkbook/links/templates/links/link.html
+++ b/linkbook/links/templates/links/link.html
@@ -48,10 +48,11 @@
                                     <div id="modal1" class="modal">
                                             <div class="modal-content">
                                                 <div class="row">
-                                                    <div class="col s12 m8 l8">
+                                                    <div class="col s12 m7 l7">
                                                         <div class="title"><a id="link_url" href="{{ link.url }}" target="_blank"> {{ link.url }}</a>  </div>
                                                     </div>
-                                                    <div class="col s12 m4 l4">
+                                                    <div class="col s12 m2 l2"></div>
+                                                    <div class="col s12 m3 l3">
                                                        <button title="copy to clipboard" class="btn black white-text" id="copy"> <i class="material-icons black" style="color: white">content_copy</i></button>
                                                     </div>
                                                 </div>
