--- a/linkbook/core/templates/core/profile.html
+++ b/linkbook/core/templates/core/profile.html
@@ -71,10 +71,21 @@
       </div>
         </div>
             <div class="col s12 m12 l8">
-            <div class="header center center-align" style="padding: 0px; margin: 0px">
-                    <h5 style="padding: 0px; margin: 0px">Popular Links</h5>
+            <div class="row">
+                <div class="col s6 m6 l6">
+                                <div class="header center center-align" id="popularLinksTab" style="padding: 0px; margin: 0px; cursor:pointer;">
+                    <h5 style="padding: 0px; margin: 0px; cursor: pointer">Popular Links</h5>
                 </div>
-                <div class="row">
+                </div>
+                <div class="col s6 m6 l6">
+                                <div class="header center center-align" style="padding: 0px; margin: 0px; cursor: pointer" id="popularBooksTab">
+                    <h5 style="padding: 0px; margin: 0px" >Popular Books</h5>
+                </div>
+                    <br><br>
+                </div>
+
+            </div>
+                <div class="row" id="popularLinks">
                     <div class="col s12 m12 l6">
 
                         {% if links.0 == none %}
