added share options

--- a/linkbook/links/templates/links/link.html
+++ b/linkbook/links/templates/links/link.html
@@ -42,7 +42,22 @@
                                         <div class="col s4 m4 l4 right-align" id="icons_extra">
                                             <a class="btn-floating btn-small waves-effect waves-light blue" href="#modal1" title="Show URL"><i class="material-icons">remove_red_eye</i></a>
                                             <a class="btn-floating btn-small waves-effect waves-light blue" href="{{ link.url }}" title="Visit Link" target="_blank"><i class="material-icons">open_in_new</i></a>
-                                            <a class="btn-floating btn-small waves-effect waves-light blue" href="#" title="Share"><i class="material-icons">share</i></a>
+
+                                            
+                                            <a class="btn-floating btn-small waves-effect waves-light blue dropbtn" href="#" title="Share" onclick="shareDropDown()"><i class="material-icons">share</i></a>
+                                                    <div id="shareDrop" class="dropdown-content">
+                                                        <a href="#">Link 1</a>
+                                                        <a href="#">Link 2</a>
+                                                        <a href="#">Link 3</a>
+                                                    </div>
+                                            
+
+                                            
+
+
+
+
+
                                         </div>
                                     </div>
                                     <div id="modal1" class="modal">
@@ -86,6 +101,38 @@
                     </li>
                     {% endif %}
                     <!-- End of open graph data -->
+
+                    <!-- Sharing Options -->
+
+                    <li class="collection-item avatar">
+                      <i class="material-icons circle blue-grey">share</i>
+                        <span class="title blue-grey-text">Share</span>
+                        <p>
+                            <div>
+                                <a href = "https://www.facebook.com/sharer/sharer.php?u={{link.url}}">
+                                    <img height=41px width=41px src="/static/icons/fb.svg" alt="Facebook" />
+                                </a>
+                                <a href = "https://twitter.com/home?status={{link.url}}">
+                                    <img height=41px width=41px src="/static/icons/Twitterbird.png" alt="Twitter" />
+                                </a>
+                                <a href = "https://plus.google.com/share?url={{link.url}}">
+                                    <img height=41px width=41px src="/static/icons/gplus.png" alt="Google+" />
+                                </a>
+                                <a href = "http://www.reddit.com/submit?url={{link.url}}">
+                                    <img height=41px width=41px src="/static/icons/reddit.png" alt="Reddit" />
+                                </a>
+                                <a href = "http://pinterest.com/pin/create/button/?url={{link.url}}&description={{link.description}}">
+                                    <img height=41px width=41px src="/static/icons/pinterest.svg" alt="Pinterest" />
+                                </a>
+                                <a href = "https://www.linkedin.com/shareArticle?mini=true&url={{link.url}}">
+                                    <img height=41px width=41px src="/static/icons/linkedin.svg" alt="LinkedIn" />
+                                </a>
+                            </div>
+                        </p>
+                    </li>
+
+                    <!-- Tags -->
+
                     <li class="collection-item avatar">
                       <i class="material-icons circle blue-grey">assignment</i>
                         <span class="title blue-grey-text">Tags</span>
@@ -240,6 +287,24 @@
     $temp.val($(element).text()).select();
     document.execCommand("copy");
     $temp.remove();
+}
+
+function shareDropDown() {
+    document.getElementById("shareDrop").classList.toggle("show");
+}
+
+window.onclick = function(event) {
+  if (!event.target.matches('.dropbtn')) {
+
+    var dropdowns = document.getElementsByClassName("dropdown-content");
+    var i;
+    for (i = 0; i < dropdowns.length; i++) {
+      var openDropdown = dropdowns[i];
+      if (openDropdown.classList.contains('show')) {
+        openDropdown.classList.remove('show');
+      }
+    }
+  }
 }
     </script>
 
